# 1factory-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PLAN.md
onefactory_mcp/: client.py  config.py  server.py
onefactory_mcp/tools/: fais.py  inspections.py  part_masters.py  plans.py  qms.py  suppliers.py  work_orders.py
